--- a/Level1/Unit1/WordSearch/index.html
+++ b/Level1/Unit1/WordSearch/index.html
@@ -39,7 +39,7 @@
         }
         #word-search-canvas {
             width: 100%;
-            max-width: 600px; /* Limitar o tamanho máximo do canvas */
+            max-width: 600px;
             height: auto;
             border: 2px solid #4a90e2;
             border-radius: 10px;
@@ -99,6 +99,54 @@
             background-color: #357ab7;
         }
 
+        /* Estilos do modal de conclusão */
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            display: none;
+            z-index: 1000;
+        }
+        #completion-modal {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            display: none;
+            z-index: 1001;
+        }
+        #completion-modal h2 {
+            margin-top: 0;
+            font-size: 2rem;
+            color: #4a90e2;
+        }
+        #completion-modal p {
+            font-size: 1.2rem;
+            margin: 10px 0;
+        }
+        #completion-modal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #4a90e2;
+            color: white;
+            transition: background-color 0.3s ease;
+        }
+        #completion-modal button:hover {
+            background-color: #357ABD;
+        }
+
         /* Media query para telas pequenas */
         @media (max-width: 600px) {
             #back-button {
@@ -107,7 +155,7 @@
                 display: block;
             }
             h1 {
-                margin-top: 50px; /* Adiciona espaço extra acima do título */
+                margin-top: 50px;
             }
         }
     </style>
@@ -117,15 +165,60 @@
     Back
 </button>
 
-    <h1>Hannah Word Search Game</h1>
-    <button id="reset-button">Restart Game</button>
-    <div id="word-search-container">
-        <canvas id="word-search-canvas"></canvas>
-        <div id="words-list">
-            <h2>Words to Find</h2>
-            <ul id="words"></ul>
-        </div>
+<h1>Hannah Word Search Game</h1>
+<button id="reset-button">Restart Game</button>
+<div id="word-search-container">
+    <canvas id="word-search-canvas"></canvas>
+    <div id="words-list">
+        <h2>Words to Find</h2>
+        <ul id="words"></ul>
     </div>
-    <script src="script.js"></script>
+</div>
+
+<!-- Modal de conclusão -->
+<div id="overlay"></div>
+<div id="completion-modal">
+    <h2>Phase Completed!</h2>
+    <p>Congratulations! You have completed this phase.</p>
+    <button onclick="closeModal()">Close</button>
+</div>
+
+<script src="script.js"></script>
+<script>
+    // Função para exibir o modal de conclusão
+    function showCompletionModal() {
+        document.getElementById('overlay').style.display = 'block';
+        document.getElementById('completion-modal').style.display = 'block';
+    }
+
+    // Função para fechar o modal de conclusão
+    function closeModal() {
+        document.getElementById('overlay').style.display = 'none';
+        document.getElementById('completion-modal').style.display = 'none';
+    }
+
+    // Função para verificar se todas as palavras foram encontradas
+    function checkCompletion() {
+        if (foundCells.length === gridSize * gridSize) {
+            showCompletionModal();
+        }
+    }
+
+    // Adiciona a chamada para checkCompletion na função checkWord
+    function checkWord() {
+        const selectedCellsSorted = [...selectedCells].sort((a, b) => a.row - b.row || a.col - b.col);
+        const selectedWord = selectedCellsSorted.map(cell => grid[cell.row][cell.col]).join('');
+
+        if (wordsToFind.includes(selectedWord)) {
+            markWordInList(selectedWord);
+            foundCells = foundCells.concat(selectedCells);
+            selectedCells = [];
+            drawWordSearchGrid();
+            drawSelectedCells();
+            // Verifica se a fase está completa
+            checkCompletion();
+        }
+    }
+</script>
 </body>
 </html>
