--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -141,7 +141,7 @@
     </style>
 </head>
 <body>
-<button onclick="history.back()" style="padding: 15px 25px; background-color: #ff6347; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
+<button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
 
