--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -6,224 +6,307 @@
     <title>Hannah Missing Word</title>
     <style>
         body {
-            font-family: "Times New Roman", Times, serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            height: 100vh;
+            font-family: 'Times New Roman', Times, serif;
             margin: 0;
-            background: url('../../../imagens/fundo.png') repeat;
-            color: #333;
+            padding: 20px;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: contain;
+            background-position: center;
         }
-
-        #back-button {
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            position: relative;
-            top: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-        }
-
-        #back-button:hover {
-            background-color: #0056b3;
-        }
-
         h1 {
-            margin-top: 40px;
-            margin-bottom: 10px;
             text-align: center;
-            font-size: 2.5em;
-            color: #444;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            color: #ff4500;
+            font-size: 3rem;
+            margin-bottom: 20px;
         }
-
-        /* Estilo para o container de atividades */
         .activity-container {
+            margin-top: 20px;
+        }
+        .activity {
+            display: flex;
+            align-items: center;
+            position: relative;
+            padding: 20px;
+            background-color: #ffdab9;
+            border-radius: 15px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            overflow: hidden;
+        }
+        .activity img {
+            max-width: 150px;
+            max-height: 150px;
+            border-radius: 12px;
+            margin-right: 20px;
+        }
+        .missing-word {
+            font-size: 36px;
+            font-weight: bold;
+            color: #ff4500;
+        }
+        .full-word {
+            font-size: 24px;
+            margin-top: 10px;
+            color: #8b4513;
+        }
+        .missing-letter-input {
+            width: 40px;
+            font-size: 36px;
+            text-align: center;
+            border-bottom: 2px solid black;
+            margin-right: 10px;
+            border: 2px solid black;
+        }
+        .correct {
+            border-color: blue;
+        }
+        .incorrect {
+            border-color: red;
+        }
+        .word-container {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
-
-        #overlay {
+        .letter-animation {
+            font-size: 80px;
+            color: #32CD32;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: grow-shrink 1s ease-in-out;
             display: none;
+        }
+        @keyframes grow-shrink {
+            0% {
+                transform: translate(-50%, -50%) scale(0);
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.5);
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        /* Estilos do modal de conclusão */
+        #overlay {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.7);
+            display: none;
             z-index: 1000;
         }
-
         #completion-modal {
-            display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             background: white;
-            padding: 20px;
+            padding: 30px;
             border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: none;
             z-index: 1001;
         }
-
         #completion-modal h2 {
-            margin-bottom: 10px;
+            margin-top: 0;
+            font-size: 2rem;
+            color: #32CD32;
         }
-
         #completion-modal p {
-            margin-bottom: 20px;
+            font-size: 1.2rem;
+            margin: 10px 0;
         }
-
         #completion-modal button {
+            margin-top: 20px;
             padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
+            font-size: 1rem;
+            cursor: pointer;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
+            background-color: #32CD32;
+            color: white;
+            transition: background-color 0.3s ease;
         }
-
         #completion-modal button:hover {
-            background-color: #0056b3;
+            background-color: #28a428;
         }
     </style>
 </head>
 <body>
-    <button id="back-button" onclick="goBack()">Back</button>
-    <h1>Hannah Missing Word</h1>
-    <div id="activity-container" class="activity-container"></div>
-    <div id="overlay"></div>
-    <div id="completion-modal">
-        <h2>Phase Completed!</h2>
-        <p>Congratulations! You have completed this phase.</p>
-        <button onclick="closeModal()">Close</button>
-    </div>
+<button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
+    Back
+</button>
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+<h1>Hannah Missing Word</h1>
 
-    <script>
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+<div id="activity-container" class="activity-container"></div>
+
+<!-- Modal de conclusão -->
+<div id="overlay"></div>
+<div id="completion-modal">
+    <h2>Phase Completed!</h2>
+    <p>Congratulations! You have completed this phase.</p>
+    <button onclick="closeModal()">Close</button>
+</div>
+
+<script>
+    let activities = [];
+    let completedWords = 0; // Contador de palavras concluídas
+
+    function speakText(text) {
+        const synth = window.speechSynthesis;
+        const utterThis = new SpeechSynthesisUtterance(text);
+        utterThis.lang = 'en-US';
+        synth.speak(utterThis);
+    }
+
+    async function loadActivities() {
+        try {
+            const response = await fetch('../data1/words.txt');
+            const text = await response.text();
+            const words = text.trim().split('\n');
+
+            words.forEach((word, index) => {
+                const imageName = `imagem${index + 1}.jpeg`;
+                const imageUrl = `../data1/imagens/${imageName}`;
+                
+                createActivity(imageUrl, word);
+            });
+        } catch (error) {
+            console.error('Erro ao carregar palavras:', error);
+        }
+    }
+
+    function createActivity(imageUrl, word) {
+        const activityContainer = document.getElementById('activity-container');
+        const activityDiv = document.createElement('div');
+        activityDiv.classList.add('activity');
+
+        const imgElement = document.createElement('img');
+        imgElement.src = imageUrl;
+        imgElement.onerror = function() {
+            console.error(`Erro ao carregar a imagem: ${imageUrl}`);
         };
-        firebase.initializeApp(firebaseConfig);
+        activityDiv.appendChild(imgElement);
 
-        let activities = [];
-        let completedWords = 0;
+        const wordContainer = document.createElement('div');
+        wordContainer.classList.add('word-container');
 
-        async function loadActivities() {
-            try {
-                const response = await fetch('../data1/words.txt');
-                const text = await response.text();
-                const words = text.trim().split('\n');
+        const missingWordElement = document.createElement('div');
+        missingWordElement.classList.add('missing-word');
 
-                words.forEach((word, index) => {
-                    const imageName = `imagem${index + 1}.jpeg`;
-                    const imageUrl = `../data1/imagens/${imageName}`;
-                    createActivity(imageUrl, word);
-                });
-            } catch (error) {
-                console.error('Error loading words:', error);
-            }
-        }
+        const letterInputs = [];
+        word.split('').forEach((letter, index) => {
+            const letterInput = document.createElement('input');
+            letterInput.classList.add('missing-letter-input');
+            letterInput.maxLength = 1;
 
-        function createActivity(imageUrl, word) {
-            const activityContainer = document.getElementById('activity-container');
-            const activityDiv = document.createElement('div');
-            activityDiv.innerHTML = `
-                <img src="${imageUrl}" alt="${word}" />
-                <input type="text" placeholder="Type the missing word" />
-                <button onclick="checkAnswer(this, '${word}')">Check</button>
-            `;
-            activityContainer.appendChild(activityDiv);
-            activities.push({ word, activityDiv });
-        }
+            letterInput.addEventListener('input', function() {
+                if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
+                    letterInput.classList.add('correct');
+                    letterInput.classList.remove('incorrect');
 
-        function checkAnswer(button, correctWord) {
-            const input = button.previousElementSibling;
-            const userAnswer = input.value.trim().toLowerCase();
-            if (userAnswer === correctWord.toLowerCase()) {
-                input.style.borderColor = 'green';
-                completedWords++;
-                if (completedWords === activities.length) {
-                    showCompletionModal();
+                    if (index < word.length - 1) {
+                        letterInputs[index + 1].focus(); 
+                    }
+
+                    const animationElement = document.createElement('div');
+                    animationElement.classList.add('letter-animation');
+                    animationElement.innerText = letter.toUpperCase();
+                    activityDiv.appendChild(animationElement);
+                    animationElement.style.display = 'block';
+
+                    setTimeout(() => {
+                        animationElement.style.display = 'none';
+                        animationElement.remove();
+                    }, 1000);
+
+                    const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
+                    if (userWord === word.toUpperCase()) {
+                        speakText(word);
+                        completedWords++;
+
+                        if (completedWords === activities.length) {
+                            showCompletionModal();
+                        }
+                    } else {
+                        speakText(letter);
+                    }
+                } else {
+                    letterInput.classList.add('incorrect');
+                    letterInput.classList.remove('correct');
                 }
-            } else {
-                input.style.borderColor = 'red';
-            }
+            });
+
+            letterInputs.push(letterInput);
+            missingWordElement.appendChild(letterInput);
+        });
+
+        wordContainer.appendChild(missingWordElement);
+        activityDiv.appendChild(wordContainer);
+        activityContainer.appendChild(activityDiv);
+        activities.push(word);
+    }
+
+    function showCompletionModal() {
+        updateProgressInDatabase();
+        document.getElementById('overlay').style.display = 'block';
+        document.getElementById('completion-modal').style.display = 'block';
+    }
+
+    function closeModal() {
+        document.getElementById('overlay').style.display = 'none';
+        document.getElementById('completion-modal').style.display = 'none';
+    }
+
+    function updateProgressInDatabase() {
+        const currentPhase = getPhaseFromURL();
+        const { level, unit } = getLevelAndUnitFromURL();
+        const userId = getCurrentUserId(); // Função para obter o ID do usuário logado
+
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+        if (currentPhase === "last") {
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+            // Criar a nova unidade na mesma level
+            firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+        } else if (currentPhase === "end") {
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            // Criar um novo level e adicionar Unit1
+            firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+        } else {
+            dbRef.update({ [`fase${currentPhase}`]: true });
+            const nextPhase = parseInt(currentPhase) + 1;
+            dbRef.update({ [`fase${nextPhase}`]: true });
         }
+    }
 
-        function showCompletionModal() {
-            updateProgressInDatabase();
-            document.getElementById('overlay').style.display = 'block';
-            document.getElementById('completion-modal').style.display = 'block';
-        }
+    function getPhaseFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return params.get('fase');
+    }
 
-        function closeModal() {
-            document.getElementById('overlay').style.display = 'none';
-            document.getElementById('completion-modal').style.display = 'none';
-        }
+    function getLevelAndUnitFromURL() {
+        const url = window.location.pathname;
+        const parts = url.split('/');
+        return { level: parts[1], unit: parts[2] };
+    }
 
-        function updateProgressInDatabase() {
-            const currentPhase = getPhaseFromURL();
-            const { level, unit } = getLevelAndUnitFromURL();
-            const userId = getCurrentUserId(); // Function to obtain the logged-in user's ID
+    function getCurrentUserId() {
+        // Lógica para obter o ID do usuário logado
+        return "exampleUserId"; // Substituir pela lógica real
+    }
 
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+    document.addEventListener('DOMContentLoaded', loadActivities);
+</script>
 
-            if (currentPhase === "last") {
-                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                // Create the new unit in the current level
-                firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
-            } else if (currentPhase === "end") {
-                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                // Create a new level and add Unit1
-                firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-            } else {
-                dbRef.update({ [`fase${currentPhase}`]: true });
-                const nextPhase = parseInt(currentPhase) + 1;
-                dbRef.update({ [`fase${nextPhase}`]: true });
-            }
-        }
-
-        function getPhaseFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            return params.get('fase');
-        }
-
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname;
-            const parts = url.split('/');
-            return { level: parts[1], unit: parts[2] };
-        }
-
-        function getCurrentUserId() {
-            // Logic to get the logged-in user's ID
-            return "exampleUserId"; // Replace with actual logic
-        }
-
-        document.addEventListener('DOMContentLoaded', loadActivities);
-    </script>
 </body>
 </html>
